2nd commit for homework files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <form id="new-item-form">
+
       <div id="form-wrapper">
         <div class="form-item">
           <label for="restaurant" class="primary">Restaurant</label>
@@ -29,15 +30,13 @@
           <input type="text" id="food" required/>
         </div>
 
-
-
       </div>
       <input type="submit" value="save"/>
     </form>
 
     <button id="delete-all">Delete All</button>
 
-    <h1>Food List</h1>
+    <h1>Favourite Food List</h1>
     <ul id="food-list"></ul>
   </body>
 </html>
